# CARramps

./: INSTALL  MD5  configure  configure.ac
R/: CARramps-internal.R  CARramps.fit.R  combo1colFromC1QD.R  combo1colFromC3QD.R  combo1colFromCD.R  kronVectMult1colFromC3Q_d.R  kronVectMult1colFromC_d.R  plot2D.R  rdirichlet.R  samplingFromCD.R
data/: iowaNW00.RData
man/: CARramps-package.Rd  CARramps.fit.Rd  combo1colFromC1QD.Rd  combo1colFromC3QD.Rd  combo1colFromCD.Rd  eigenCAR1.Rd  eigenRW1.Rd  inprod.Rd  iowaNW00.Rd  kronVectMult1colFromC3Q_d.Rd  kronVectMult1colFromC_d.Rd  makeQ.Rd  makeRW1Q.Rd  makeRW2Q.Rd  multivspost2blog.Rd  multivspost2blogandtausqtot.Rd  optimizelogpost.Rd  plot2D.Rd  rdirichlet.Rd  samplingFromCD.Rd
src/: Makefile.in  allCARramps.cu  allCARramps.h  combo1colForR.h  combo1colForR1Q_d.cu  combo1colForR1Q_d.h  combo1colForR3Q_d.cu  combo1colForR3Q_d.h  combo1colForR_d.cu  combo1colForR_d.h  kronVectForR.h  kronVectMult1colForR.h  kronVectMult1colForR3Q_d.cu  kronVectMult1colForR3Q_d.h  kronVectMult1colForR_d.cu  kronVectMult1colForR_d.h  kronVectMultForR.h  kronVectMultForR_d.h  mstnrUtils.cu  mstnrUtils.h  sampling_d.cu  sampling_d.h
